@@ -11,9 +11,9 @@
  * the Apache License, Version 2.0 (the "License"); you may
  * not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *   http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing,
  * software distributed under the License is distributed on an
  * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -24,10 +24,8 @@
  */
 package co.elastic.apm.agent.bci;
 
-import co.elastic.apm.agent.MockTracer;
 import co.elastic.apm.agent.configuration.CoreConfiguration;
 import co.elastic.apm.agent.impl.ElasticApmTracer;
-import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
@@ -36,14 +34,19 @@ import static org.mockito.Mockito.*;
 
 class OsgiBootDelegationEnablerTest {
 
-    private final ElasticApmTracer tracer = MockTracer.create();
+    private ElasticApmTracer tracer;
+    private CoreConfiguration coreConfiguration;
+
     private final OsgiBootDelegationEnabler osgiBootDelegationEnabler = new OsgiBootDelegationEnabler();
 
     @BeforeEach
-    @AfterEach
-    void clearState() {
+    void setup() {
+        coreConfiguration = spy(CoreConfiguration.class);
+        tracer = mock(ElasticApmTracer.class);
+        when(tracer.getConfig(CoreConfiguration.class)).thenReturn(coreConfiguration);
         System.clearProperty("org.osgi.framework.bootdelegation");
         System.clearProperty("atlassian.org.osgi.framework.bootdelegation");
+        System.clearProperty("atlassian.org.osgi.framework.bootdelegation.extra");
     }
 
     @Test
@@ -51,8 +54,19 @@ class OsgiBootDelegationEnablerTest {
         osgiBootDelegationEnabler.start(tracer);
         assertThat(System.getProperties())
             .containsEntry("org.osgi.framework.bootdelegation", "co.elastic.apm.agent.*")
-            .containsKey("atlassian.org.osgi.framework.bootdelegation");
+            .containsKey("atlassian.org.osgi.framework.bootdelegation")
+            .doesNotContainKey("atlassian.org.osgi.framework.bootdelegation.extra");
         assertThat(System.getProperty("atlassian.org.osgi.framework.bootdelegation")).matches(".+,co.elastic.apm.agent.*");
+    }
+
+    @Test
+    void testBootdelegationWithNewAtlassianConfig() {
+        when(coreConfiguration.useAtlassianNewBootDelegationConfig()).thenReturn(true);
+        osgiBootDelegationEnabler.start(tracer);
+        assertThat(System.getProperties())
+            .containsEntry("org.osgi.framework.bootdelegation", "co.elastic.apm.agent.*")
+            .containsEntry("atlassian.org.osgi.framework.bootdelegation.extra", "co.elastic.apm.agent.*")
+            .doesNotContainKey("atlassian.org.osgi.framework.bootdelegation");
     }
 
     @Test
@@ -61,7 +75,18 @@ class OsgiBootDelegationEnablerTest {
         osgiBootDelegationEnabler.start(tracer);
         assertThat(System.getProperties())
             .containsEntry("org.osgi.framework.bootdelegation", "foo.bar,co.elastic.apm.agent.*")
-            .containsKey("atlassian.org.osgi.framework.bootdelegation");
+            .containsKey("atlassian.org.osgi.framework.bootdelegation")
+            .doesNotContainKey("atlassian.org.osgi.framework.bootdelegation.extra");
+    }
+
+    @Test
+    void testNewAtlassianBootdelegationWithExistingProperty() {
+        when(coreConfiguration.useAtlassianNewBootDelegationConfig()).thenReturn(true);
+        System.setProperty("atlassian.org.osgi.framework.bootdelegation.extra", "foo.bar");
+        osgiBootDelegationEnabler.start(tracer);
+        assertThat(System.getProperties())
+            .containsEntry("atlassian.org.osgi.framework.bootdelegation.extra", "foo.bar,co.elastic.apm.agent.*")
+            .doesNotContainKey("atlassian.org.osgi.framework.bootdelegation");
     }
 
     @Test
@@ -69,17 +94,15 @@ class OsgiBootDelegationEnablerTest {
         System.setProperty("atlassian.org.osgi.framework.bootdelegation", "foo.bar");
         osgiBootDelegationEnabler.start(tracer);
         assertThat(System.getProperties())
-            .containsEntry("atlassian.org.osgi.framework.bootdelegation", "foo.bar,co.elastic.apm.agent.*");
+            .containsEntry("atlassian.org.osgi.framework.bootdelegation", "foo.bar,co.elastic.apm.agent.*")
+            .doesNotContainKey("atlassian.org.osgi.framework.bootdelegation.extra");
     }
 
     @Test
     void testEmptyBootdelegationWithExistingProperty() {
-        CoreConfiguration coreConfiguration = mock(CoreConfiguration.class);
-        ElasticApmTracer elasticApmTracer = mock(ElasticApmTracer.class);
-        when(elasticApmTracer.getConfig(CoreConfiguration.class)).thenReturn(coreConfiguration);
         when(coreConfiguration.getPackagesToAppendToBootdelegationProperty()).thenReturn(null);
         System.setProperty("org.osgi.framework.bootdelegation", "foo.bar");
-        osgiBootDelegationEnabler.start(elasticApmTracer);
+        osgiBootDelegationEnabler.start(tracer);
         assertThat(System.getProperties())
             .containsEntry("org.osgi.framework.bootdelegation", "foo.bar");
     }
