@@ -52,6 +52,7 @@ This is not a breaking change, so former
 * Stop capturing JDBC affected rows count using `Statement.getUpdateCount` to prevent unreliable side-effects {pull}1147[#1147]
 * Fix OpenTracing error tag handling (set transaction error result when tag value is `true`) {pull}1159[#1159]
 * Due to a bug in the build we didn't include the gRPC plugin in the build so far
+* `java.lang.ClassNotFoundException: Unable to load class 'jdk.internal...'` is thrown when tracing specific versions of Atlassian systems {pull}1168[#1168]
 
 
 [[release-notes-1.x]]
